2009-08-13  Per Bothner  <per@bothner.com>
	    Olin Shivers

	* srfi13.scm: Reference implementation of SRFI-13.  Will need work.
	* Makefile.am: Update accordingly.

2009-05-30  Per Bothner  <per@bothner.com>
	    Dorai Sitaram

	* pregexp.scm: Get complete version.
	Also add commented-out version based on java.util.regex.
	* Makefile.am: Build pregexp.scm.

2009-03-15  Per Bothner  <per@bothner.com>

	* srfi69.scm: Move some code into kawa/lib/kawa/hashtable.scm and
	kawa/lib/rnrs/hashtables.scm.
	Change to make use of that - and R6RS library support.

2009-03-07  Per Bothner  <per@bothner.com>

	* srfi69.scm: Various updates for changes in GeneralHashTable.

2007-09-02  Per Bothner  <per@bothner.com>

	* gui.scm (button-keyword, window-keyword):  The java.lang.String
	parameter is now a String string, not a symbol.

2007-02-27  Per Bothner  <per@bothner.com>

	* testing.scm (%test-error): Need separate Kawa case for exception
	type #t.

2007-02-14  Per Bothner  <per@bothner.com>

	* testing.scm (test-runner-reset): Initialize test-result-alist!.
	This is needed in the case of zero tests.

	* testing.scm (%test-record-define): Fix off-by-one error.

2007-01-20  Per Bothner  <per@bothner.com>

	* XML.scm (commmet, processing-instruction): New constants.

2007-01-04  Per Bothner  <per@bothner.com>

	* gui.scm (uri): Use Path's openInputStream method.

2006-12-20  Per Bothner  <per@bothner.com>

	* Makefile.am: Simplify - we use '$JAVA kawa.repl' rather than $KAWA1.

2006-12-05  Per Bothner  <per@bothner.com>

	* printf.scm: Replace slib:error by error.
	Relace stdio:fprintf by fprintf.
	Replace slib:tab and slib:form-feed by appropriate character literals.

	* swing.scm (polygon): Take doubleValue of real-part results so
	JAVA6 doesn't complin about ambiguous method.  Add type specifiers.

2006-08-11  Per Bothner  <per@bothner.com>

	* testing.scm (%test-comp1body):  Remove inccorect setting of
	expected-value property - to R5RS standard function exp.
