@@ -1,3 +1,7 @@
+2009-08-14  Per Bothner  <per@bothner.com>
+
+	* srfi13.scm: Start adding type-specifiers and optimizing.
+
 2009-08-13  Per Bothner  <per@bothner.com>
 	    Olin Shivers
 
